
- It is now possible to use a constant as the default value for a data
  member. For example:

  // Slice
  const int MIN = 1;

  struct Info
  {
      int size = MIN;
  };

  It is also possible for a constant to refer to another constant:

  // Slice
  const int MAXIMUM_SIZE = 100;
  const int DEFAULT_SIZE = MAXIMUM_SIZE;


C++ Changes
===========

- Fixed a bug where the IceUtil::Timer thread could die in case very
  large delays were specified.

- Removed extra include/IceGrid/Perf.h file.


Java Changes
============

- Added overloaded constructors for user and system exceptions that
  accept a Throwable argument.

- Added an ice_staticId method to generated PrxHelper classes.

- Fixed a bug in slice2java in which a floating point default value
  could cause a compile error.

- Fixed a bug where Ice.ServerIdleTime wouldn't consistently shutdown
  servers after the given period of inactivity.


C# Changes
==========

- Added an ice_staticId method to generated PrxHelper classes.

- Fixed a bug in the generated code when a Slice class uses the
  property mapping and declares default values for its members.


Python Changes
==============

- Fixed bug where None was not recognized as a keyword.


Ruby Changes
============

- Fixed a bug in the Ice extension that would cause an ArgumentError
  to be raised when attempting to print a byte sequence whose value is
  a string that contains null bytes.


======================================================================
Changes since version 3.4.0
======================================================================


General Changes
===============

- Added the new property Freeze.DbEnv.<db>.LockFile and changed the
  dumpdb and transformdb utilities so that they can be run safely on
  a database environment that is currently open in another process.

- Changed the Glacier2 helper classes to cache the client category.

- Added the ability to use underscores in Slice identifiers. See the