@@ -72,6 +72,10 @@ General Changes
 C++ Changes
 ===========
 
+- Fixed a bug in the generated code for a Slice structure containing
+  at least one data member that declares a default value. The
+  constructors were not being exported correctly in this case.
+
 - Fixed a bug where the IceUtil::Timer thread could die in case very
   large delays were specified.
 
